--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,7 +13,5 @@
 @import 'views/Home';
 
 // COMPONENTS
-@import 'components/App';
-@import 'components/AppHeader';
-@import 'components/AppFooter';
 @import 'components/MovieRow';
+@import 'components/Banner';
