trailer pop up added

--- a/src/assets/styles/main.scss
+++ b/src/assets/styles/main.scss
@@ -13,5 +13,6 @@
 @import 'views/Home';
 
 // COMPONENTS
+@import 'components/AppHeader';
 @import 'components/MovieRow';
 @import 'components/Banner';
